reworked ps-now section+minor spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* GENERICS */
+body, button{
+    font-weight: 600!important;
+}
+
 header{
     z-index: 1;
 }
